tests/baselines/reference/invalid-non-id-start-groupspecifier-7.errors.txt
invalid-non-id-start-groupspecifier-7.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-non-id-start-groupspecifier-7.ts(14,6): error TS1005: '>' expected.
invalid-non-id-start-groupspecifier-7.ts(14,8): error TS1125: Hexadecimal digit expected.
invalid-non-id-start-groupspecifier-7.ts(14,11): error TS1005: '}' expected.


==== invalid-non-id-start-groupspecifier-7.ts (4 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupSpecifier must be identifier-like.
    esid: prod-GroupSpecifier
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a\u{10FFFF}>.)/;
       ~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
         
!!! error TS1005: '>' expected.
           
!!! error TS1125: Hexadecimal digit expected.
              
!!! error TS1005: '}' expected.
    